\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 1.5.9}{
   \itemize{
      \item{Add bSummarizedExperiment option to dba() to convert DBA object}
      \item{Add DataType = DBA_DATA_SUMMARIZED_REPORT option to dba.report() to return SummarizedExperiment}
   }
}

\section{Version 1.5.5}{
   \itemize{
      \item{Add bLowMem option to dba.count for low memory counting using summarizeOverlaps}
   }
}

\section{Version 1.5.4}{
   \itemize{
      \item{Add ability to add externally derived counts via dba.peakset and a sample sheet}
   }
}

\section{Version 1.5.2}{
   \itemize{
      \item{add features to dba.count to deal with filtering}
      \itemize{
         \item{Change parameter name: maxFilter -> filter}
         \item{Allow maxFilter to be a numerical vector to retrieve filtering rate}
         \item{Add parameter: filterFun to control filtering method}
         \item{Fix bug so SN gets recomputed after filtering}
         \item{Update documentation with example}
      }
   }
}

\section{Version 1.5.1}{
   \itemize{
      \item{Roll up bugfixes for 1.4.0}
   }
}

\section{Version 1.4.0}{
   \itemize{
      \item{Plotting}
      \itemize{
          \item{dba.plotMA}
          \itemize{
             \item{Smooth plots now default}
             \item{Added fold parameter in addition to th (threshold)}
          }
          \item{dba.plotHeatmap}
          \itemize{
             \item{Side colorbars added}
                \item{Add support for specifying sample mask to include any subset of samples in a contrast plot, including samples that were not in the original contrast}
           }
           \item{dba.plotVenn}
           \itemize{
                \item{Changed plotter from limma to T. Girke's overLapper}
                \item{Added support for 4-way Venns (also in dba/overlap)}
	  }
	  \item{dba.plotPCA}
	  \itemize{